--- a/Ex01.md
+++ b/Ex01.md
@@ -1,7 +1,8 @@
 # Ex. No : 1	
 # IMPLEMENTATION OF SYMBOL TABLE 
+## Name : KARTHIKEYAN C
 ## Register Number : 212224040152
-## Date : 15/09/2025
+## Date : 25/08/2025
 
 ## AIM   
 To write a C program to implement a symbol table.
