--- a/Ex02.md
+++ b/Ex02.md
@@ -1,7 +1,8 @@
 # Ex. No : 2	
 # GENERATION OF LEXICAL TOKENS LEX/FLEX TOOL
+## Name :KARTHIKEYAN C
 ## Register Number :212224040152
-## Date : 30/09/2025
+## Date : 08/09/2025
 
 ## AIM   
 To write a lex program to implement lexical analyzer to recognize a few patterns.
